[gd_scene load_steps=4 format=3 uid="uid://b56t6ag2qtpu8"]

[ext_resource type="Script" path="res://Scripts/Enemigo/Crucero/Enemigo_crucero.gd" id="1_iwjpf"]
[ext_resource type="Texture2D" uid="uid://dstg8p565sdi7" path="res://Arte/Enemigo/Crucero/CruceroV3.png" id="2_5uf67"]
[ext_resource type="AudioStream" uid="uid://dau6k3l6ewv24" path="res://Musica/Laser de color numero 1.mp3" id="3_ntjpj"]

[node name="Enemigo_Crucero" type="CharacterBody2D" groups=["Enemigo"]]
scale = Vector2(0.5, 0.5)
collision_layer = 2
script = ExtResource("1_iwjpf")

[node name="Pivot" type="Node2D" parent="."]

[node name="Icon" type="Sprite2D" parent="Pivot"]
rotation = 1.5708
scale = Vector2(2.71025, 4.69167)
texture = ExtResource("2_5uf67")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
build_mode = 1
polygon = PackedVector2Array(523, -1, -186, -233, -359, -132, -360, 120, -178, 226)

[node name="RayCast_derecha" type="RayCast2D" parent="."]
target_position = Vector2(0, 900)

[node name="RayCast_izquierda" type="RayCast2D" parent="."]
target_position = Vector2(0, -900)

[node name="Instance_point" type="Node2D" parent="."]
position = Vector2(4.44, 37.61)

[node name="Disparoenemigo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ntjpj")
volume_db = -5.652
